--- a/index.html
+++ b/index.html
@@ -3,18 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yo-buddy-hugs</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>RateEverything - Rate and Review Everything</title>
+    <meta name="description" content="Rate and review movies, books, music, games, and everything else. Discover new favorites and share your opinions with the community." />
+    <meta name="author" content="RateEverything" />
 
-    <meta property="og:title" content="yo-buddy-hugs" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon-v2.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16-v2.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32-v2.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon-v2.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon_io/android-chrome-192x192-v2.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon_io/android-chrome-512x512-v2.png" />
+    <link rel="manifest" href="/favicon_io/site-v2.webmanifest" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="RateEverything - Rate and Review Everything" />
+    <meta property="og:description" content="Rate and review movies, books, music, games, and everything else. Discover new favorites and share your opinions with the community." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon_io/android-chrome-512x512-v2.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="RateEverything - Rate and Review Everything" />
+    <meta name="twitter:description" content="Rate and review movies, books, music, games, and everything else. Discover new favorites and share your opinions with the community." />
+    <meta name="twitter:image" content="/favicon_io/android-chrome-512x512-v2.png" />
   </head>
 
   <body>
